<resources>

    //laporan kondangan
    <string name="acara">Nama Acara</string>
    <string name="pd_tgl">Tanggal</string>
    <string name="total_brs">Jumlah Total Beras</string>
    <string name="total_uang">Jumlah Total Uang</string>
    <string name="jml_tamu">Jumlah Total Tamu Undangan</string>

    //data uang dan beras
    <string name="nama">Nama</string>
    <string name="lainnya">Lainnya, misal: nama jalan, blok atau gang</string>
    <string name="jml_uang">Rp.</string>
    <string name="jml_beras">Liter</string>
    <string name="garing">/</string>
    <string name="btn_tambah">Tambah</string>
    <string name="btn_batal">Batal</string>

    <string name="app_name">Buku Kondangan</string>
    <string name="buku_kondangan">Buku Kondangan</string>

    //login
    <string name="email">Email</string>
    <string name="desktipsi">Buku Kondangan</string>
    <string name="password">Password</string>
    <string name="btn_signin">SIGN IN</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="buat_baru">Buat Akun Baru</string>
    <string name="image_login_form">Image Login</string>

    //register
    <string name="btn_signup">SIGN UP</string>
    <string name="akun_baru">Buat Akun Baru</string>
    <string name="cfm_pwd">Confirm Password</string>
    <string name="kategori">Kategori Hajatan</string>
    <string name="buat_btn">Selesai</string>
    <string name="Petunjuk">Mohon masukkan kategori hajatan anda, misal : Nikahan, Khitanan atau Lainnya. Teks akan ditampilkan pada Menu</string>
    <string name="contoh">Contoh :</string>

    //menu
    <string name="image_menu">Image Menu</string>
    <string name="kategori_hajatan">Kategori Hajatan</string>
    <string name="data_uang">Tambah Data</string>
    <string name="cari_data">Cari Data</string>
    <string name="data_kondangan">Tambah Data Kondangan</string>
    <string name="lihat_data">Lihat Data</string>
    <string name="laporan_kondangan">Rekap Data</string>

    //Lupa Password
    <string name="deskripsi">Halaman Lupa Password</string>
    <string name="lupa_pwd">Mengatur Ulang Password</string>
    <string name="catatan">Dengan mengeklik tombol RESET</string>
    <string name="catatan2">anda akan menerima email untuk mengatur ulang password</string>
    <string name="catatan3">Cek email anda..!!</string>
    <string name="btn_reset">RESET</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>

</resources>
