<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahDataBeras"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Data Beras"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginTop="50dp">
        <EditText
            android:id="@+id/nama1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:inputType="text"
            android:hint="@string/nama"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/garing"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nama2"
            android:layout_toEndOf="@+id/nama1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="text"
            android:hint="@string/nama"/>

        <Spinner
            android:id="@+id/sp_kcmt"
            android:layout_below="@+id/nama1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"/>

        <Spinner
            android:id="@+id/sp_desa"
            android:layout_below="@+id/sp_kcmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/lainnya"
            android:layout_below="@+id/sp_desa"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/lainnya" />

        <EditText
            android:id="@+id/liter"
            android:layout_below="@+id/lainnya"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_below="@+id/lainnya"
            android:layout_toEndOf="@+id/liter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="37dp"
            android:layout_marginStart="5dp"
            android:text="@string/jml_beras"
            android:textColor="@color/black"/>

        <Button
            android:layout_below="@+id/liter"
            android:id="@+id/btn_batal"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="45dp"
            android:layout_marginTop="60dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:background="@drawable/button_save"
            android:text="@string/btn_batal" />

        <Button
            android:layout_below="@+id/liter"
            android:id="@+id/btn_tambah"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="190dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="32dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:background="@drawable/button_save"
            android:text="@string/btn_tambah" />
    </RelativeLayout>

</LinearLayout>