<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateDeleteActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Data Kondangan"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="30dp">
        <EditText
            android:id="@+id/edit_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="text"
            android:hint="@string/nama"/>

        <EditText
            android:id="@+id/edit_kcmt"
            android:layout_below="@+id/edit_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:hint="Kecamatan"/>

        <EditText
            android:id="@+id/edit_desa"
            android:layout_below="@+id/edit_kcmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:hint="Kelurahan"/>

        <EditText
            android:id="@+id/edit_alamat"
            android:layout_below="@+id/edit_desa"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:hint="Tidak Ada" />

        <TextView
            android:layout_below="@+id/edit_alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:text="@string/jml_uang"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edit_nominal"
            android:layout_below="@+id/edit_alamat"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edit_liter"
            android:layout_below="@+id/edit_nominal"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:hint="Tidak Ada"/>

        <TextView
            android:layout_below="@+id/edit_nominal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="230dp"
            android:text="@string/jml_beras"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/posisi_spinner1"
            android:layout_below="@+id/edit_liter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="24dp"
            android:textSize="19sp"
            android:text="Status"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/sp_status"
            android:layout_below="@+id/edit_liter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/posisi_spinner1"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btn_ubah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_gravity="center_horizontal"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:background="@drawable/button_save"
            android:text="ubah" />

        <Button
            android:id="@+id/btn_hapus"
            android:layout_toRightOf="@+id/btn_ubah"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_gravity="center_horizontal"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:background="@drawable/button_save"
            android:text="hapus" />

    </RelativeLayout>



</LinearLayout>